process review comments (I)